# sextant

./: .codebase-intel.json  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DESIGN_PHILOSOPHY.md  EVAL_FINDINGS.md  README.dev.md  README.md  STRATEGY.md  package-lock.json  package.json  todos.md  watch.js
.claude/: settings.json
commands/: doctor.js  eval-trajectory.js  health.js  hook-posttooluse.js  hook-refresh.js  hook-sessionstart.js  init.js  inject.js  query.js  retrieve.js  scan.js  summary.js  telemetry.js  tune.js  update.js  watch-start.js  watch-stop.js  watch.js  zoekt.js
docs/: 009-handoff.md  010-benefit-proof.md  011-handoff.md  012-exported-symbol-gap.md  013-path-match-pool.md  014-handoff.md  015-handoff.md  016-phase0-recon.md  017-sprint1-metrics-and-findings.md  018-subagent-orientation-plan.md  019-directory-structure-track.md  scope-v1-handoff.md  swift-retrieval-quality-handoff.md  swift-v1-handoff.md  swift-v1-polish-handoff.md  swift-v1-scope.md  swift-v1-wire-audit.md
fixtures/: vapor-baseline.json  vapor-eval-queries.json  vapor-hook-baseline.json
fixtures/python-eval/: .gitignore  eval-dataset.json  pyproject.toml
fixtures/python-eval/app/: __init__.py  broker.py  feature_gate.py  notifications.py  router.py  service.py  test_broker.py  test_feature_gate.py  test_flag_rollout.py
lib/: classifier.js  cli.js  cochange.js  config.js  coverage-diagnostics.js  extractor.js  format-retrieval.js  freshness.js  git.js  graph-retrieve.js  graph.js  history.js  intel.js  merge-results.js  project-scope.js  resolver.js  retrieve.js  rg.js  (+11 more)
(+143 files in other folders)
