[project]
name = "sextant-python-eval"
version = "0.0.0"
description = "Synthetic Python corpus for sextant retrieval eval — exercises the Python test-path penalty (test_*.py filename convention)."
requires-python = ">=3.9"

# Declared console entry point — exercises sextant's manifest-authoritative
# entry-point map (T1.1).  `app.router:dispatch` resolves to app/router.py,
# which the summary surfaces tagged "— declared" ahead of filename heuristics.
[project.scripts]
python-eval = "app.router:dispatch"

[tool.pytest.ini_options]
# Tests are co-located with source (test_*.py next to the module), the layout
# that the test-path penalty regexes missed before 2026-05-25.
python_files = ["test_*.py"]
